--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# created from tests
+example_files/*.json
+
 # Default gitignore from https://github.com/github/gitignore/blob/master/Python.gitignore
 # Byte-compiled / optimized / DLL files
 __pycache__/
