--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -30,13 +30,13 @@ jobs:
         python -m pip install --upgrade pip
         python -m pip install flake8 cython
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-        pip install -e '.[test]'
+        python -m pip install -e '.[test]'
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
-        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
+        python -m flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+        python -m flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Test with pytest
       run: |
-        pytest
+        python -m pytest
