--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -28,7 +28,8 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        python -m pip install flake8 cython
+        python -m pip install --upgrade cython
+        python -m pip install flake8
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
         python -m pip list
         python -m pip install -e '.[test]'
