--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -29,6 +29,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         python -m pip install --upgrade cython
+        python -m pip install --upgrade setuptools
         python -m pip install flake8
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
         python -m pip list
