--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -31,6 +31,8 @@ jobs:
         python -m pip install --upgrade cython
         python -m pip install --upgrade setuptools
         python -m pip install flake8
+        # https://github.com/pypa/pip/issues/12030#issuecomment-1546344047
+        python -m pip install wheel
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
         python -m pip list
         python -m pip install -e '.[test]'
