--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -45,4 +45,4 @@ jobs:
         python -m flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Test with pytest
       run: |
-        python -m pytest --doctest-modules
+        python -m pytest
