--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -16,6 +16,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
+        # Remember to update "classifiers" in setup.py when changing Python version
         python-version: [3.7, 3.8, 3.9, '3.10', '3.11']
 
     steps:
