--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -37,7 +37,7 @@ jobs:
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
         python -m pip install pytest-cov codecov
         python -m pip list
-        python -m pip install -e '.[test]'
+        python -m pip install -e '.[all]'
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
