--- a/pytest.ini
+++ b/pytest.ini
@@ -6,6 +6,7 @@ addopts =
     --cov=meeteval
     --cov-report=xml
     --cov-report=html
+    --ignore=meeteval/der/dscore_repo/scorelib/
 
 testpaths =
     tests
