--- a/.github/workflows/noneeditable.yml
+++ b/.github/workflows/noneeditable.yml
@@ -10,14 +10,8 @@ on:
     branches: [ main ]
 
 jobs:
-  build:
-    strategy:
-      fail-fast: false
-      matrix:
-        runs-on:
-          - ubuntu-latest
-          - windows-latest
-    runs-on: ${{ matrix.runs-on }}
+  build-ubuntu:
+    runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
     - name: Set up Python 3.11
@@ -42,6 +36,29 @@ jobs:
         python -m flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
         python -m flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+    - name: Test with pytest
+      run: |
+        python -m pytest tests/test_cli.py  # Cli test are here enough
+  build-windows:
+    runs-on: windows-latest
+    steps:
+    - uses: actions/checkout@v3
+    - name: Set up Python 3.11
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.11'
+        cache: 'pip'
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        python -m pip install --upgrade cython
+        python -m pip install --upgrade setuptools
+        python -m pip install flake8
+        # https://github.com/pypa/pip/issues/12030#issuecomment-1546344047
+        python -m pip install wheel
+        pip install -r requirements.txt
+        python -m pip list
+        python -m pip install '.[test]'
     - name: Test with pytest
       run: |
         python -m pytest tests/test_cli.py  # Cli test are here enough
